--- a/index.html
+++ b/index.html
@@ -116,8 +116,13 @@
                     <h1 class="fw-light">Aidan Johnys</h1>
                     <p class="lead text-muted">Fareham College Digital Production, Design and Development</p>
                     <p>
-                        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                        <a href="#" class="btn btn-outline-primary my-2">CA1</a>
+                        <a href="#" class="btn btn-outline-success my-2">CA2</a>
+                        <a href="#" class="btn btn-outline-danger my-2">CA3</a>
+                        <a href="#" class="btn btn-outline-warning my-2">CA4</a>
+                        <a href="#" class="btn btn-outline-primary my-2">CA5</a>
+                        <a href="#" class="btn btn-outline-success my-2">CA6</a>
+                        <a href="#" class="btn btn-outline-danger my-2">CA7</a>
                     </p>
                 </div>
             </div>
