--- a/notes.html
+++ b/notes.html
@@ -83,7 +83,7 @@
                             <a class="nav-link" onclick="update_Content(0)" href="#">Gameification</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" onclick="update_Content(1)" href="#">Emerging Technologies</a>
+                            <a class="nav-link" onclick="update_Content(1)" href="#">Emerging Technology</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" onclick="update_Content(2)" href="#">Whistleblowing</a>
