--- a/notes.html
+++ b/notes.html
@@ -73,12 +73,14 @@
     <main>
         <div class="container py-4">
             <header class="pb-3 mb-4 border-bottom">
-                    <span class="fs-4">CA3 Note Page</span>
+                <span class="fs-4">CA3 Note Page</span>
             </header>
-
             <nav class="navbar navbar-expand-sm bg-light navbar-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link"href="index.html">Back</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" onclick="update_Content(0)" href="#">Gameification</a>
                         </li>
