--- a/boxmodeldemo.html
+++ b/boxmodeldemo.html
@@ -110,7 +110,7 @@
             background: #A6A881;
             padding: 20px;
             width: 200px;
-            height: 150px;
+            height: 270px;
         }
         #roundedbox2 {
             border-radius: 25px;
@@ -133,18 +133,24 @@
         <div class="container">
             <h1 class="mt-5">Box Model Demo</h1>
         </div>
-        <p id="roundedbox1">Very cool rounded box!</p>
-        <div class="dropdown">
-            <button class="dropbtn">Inventory</button>
-            <div class="dropdown-content">
-                <a href="#">£10,000 Google Play gift card</a>
-                <a href="#">Prune Juice</a>
-                <a href="#">Pecan Sandies</a>
+        <div id ="roundedbox1">
+            <p>
+                Very cool rounded box!<br />
+                You can insert all objects inside this box like so:
+            </p>
+            <img src="https://www.brainline.org/sites/all/modules/custom/bl_brain/images/brain-lateral.png" alt="Interactive Brain - How Injury Can Affect the Brain | BrainLine" width="125" height="100"/>
             </div>
-            <p>Typical NPC inventory</p>
-        </div>
-        <p id="roundedbox2">Do you want your money or do you don't want your money?</p>
-    </main>
+            <div class="dropdown">
+                <button class="dropbtn">Inventory</button>
+                <div class="dropdown-content">
+                    <a href="#">Machete</a>
+                    <a href="#">Prune Juice</a>
+                    <a href="#">Sunglasses</a>
+                </div>
+                <p>Typical NPC inventory</p>
+            </div>
+            <p id="roundedbox2">Do you want your money or do you don't want your money?</p>
+</main>
 
 </body>
 </html>
