--- a/boxmodeldemo.html
+++ b/boxmodeldemo.html
@@ -114,7 +114,7 @@
         }
         #roundedbox2 {
             border-radius: 25px;
-            background: url(https://th.bing.com/th/id/R.363d69b934e8002d4a5b30d33c945864?rik=hUwMPpUXcZMsBA&riu=http%3a%2f%2fcdn40.picsart.com%2f171159066000201.gif%3fto%3dmin%26r%3d1024&ehk=3Y2mP3pvP6v40Szc8sWVqrepQhLYuskZuwpMd8mgF7Y%3d&risl=&pid=ImgRaw&r=0);
+            background: black;
             background-position: left top;
             background-repeat: repeat;
             padding: 20px;
@@ -133,24 +133,28 @@
         <div class="container">
             <h1 class="mt-5">Box Model Demo</h1>
         </div>
-        <div id ="roundedbox1">
+        <div id="roundedbox1">
             <p>
                 Very cool rounded box!<br />
                 You can insert all objects inside this box like so:
             </p>
-            <img src="https://www.brainline.org/sites/all/modules/custom/bl_brain/images/brain-lateral.png" alt="Interactive Brain - How Injury Can Affect the Brain | BrainLine" width="125" height="100"/>
+            <img src="https://www.brainline.org/sites/all/modules/custom/bl_brain/images/brain-lateral.png" alt="Interactive Brain - How Injury Can Affect the Brain | BrainLine" width="125" height="100" />
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Inventory</button>
+            <div class="dropdown-content">
+                <a href="#">Machete</a>
+                <a href="#">Prune Juice</a>
+                <a href="#">Sunglasses</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">Inventory</button>
-                <div class="dropdown-content">
-                    <a href="#">Machete</a>
-                    <a href="#">Prune Juice</a>
-                    <a href="#">Sunglasses</a>
-                </div>
-                <p>Typical NPC inventory</p>
-            </div>
-            <p id="roundedbox2">Do you want your money or do you don't want your money?</p>
-</main>
+            <p>Typical NPC inventory</p>
+        </div>
+        <p id="roundedbox2">MOAR BOX!!!!</p>
+        <p>SAUCE CODEEEEE!!!!</p>
+        <img src="images/code1.png" />
+        <p>CSSSSSSSSSSSSSSS</p>
+        <img src="images/code2.png" />
+    </main>
 
 </body>
 </html>
