--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                                     <strong>Artificial Intelligence</strong>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                            <a href="notes.html?page=3">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                                </a>
                                         </div>
                                         <small class="text-muted">9 mins</small>
                                     </div>
