--- a/notes.html
+++ b/notes.html
@@ -79,7 +79,7 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link"href="index.html">Back</a>
+                            <a class="nav-link" href="index.html">Back</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" onclick="update_Content(0)" href="#">Gameification</a>
@@ -89,6 +89,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" onclick="update_Content(2)" href="#">Whistleblowing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" onclick="update_Content(3)" href="#">Ai Art</a>
                         </li>
                     </ul>
                 </div>
